# nhl_scraper

./: .flake8  .gitignore  README.md  hello.py  mkdocs.yml  pyproject.toml  requirements.txt  scrape_nhl_data.py  setup.py  test_scrape.py  tox.ini
.github/workflows/: docs.yml  python-package.yml  python-publish.yml  tests.yml
data/: draft_rankings.csv
docs/: about.md  api.md  contributing.md  gen_ref_pages.py  getting-started.md  index.md  installation.md  roadmap.md  usage.md
docs/examples/: scraping.md
docs/stylesheets/: extra.css
docs/usage/: draft.md  games.md  players.md  standings.md  teams.md
nhl_scraper/: __init__.py  _version.py  new_scraper.py  scraper.py
nhl_scraper/scraper/: __init__.py  draft.py  game.py  player.py  scrape.py  standings.py  teams.py  utils.py
nhl_scraper/scraper/nhledge/: __init__.py  utils.py
nhl_scraper/scraper/nhledge/skater/: __init__.py  overview.py  speed.py
nhl_scraper/scraper/scrape/: __init__.py  fetch.py  preprocessing.py  scrape.py
nhl_scraper/scraper/scrape/utils/: common.py  dicts.py  endpoints.py
nhl_scraper/scraper/tools/: __init__.py  constants.py  helper.py  utils.py
nhl_scraper/scraper/utils/: types.py  utils.py
notebooks/: nb1.ipynb  test_scraper.ipynb
tests/: __init__.py  test_player.py  test_scraper.py  test_specific_cases.py  test_standings.py
